--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head></head>
     <body>
-        <h1>This is a header</h1>
+        <h1>This is a Pruebilla</h1>
         <p>This is a paragraph</p>
         <p>this is a second paragraph</p>
     </body>
 </html>
+
+git clone https://github.com/paulahoyos/Paula_Code.git
